--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,27 @@
   --secondary-background-color: #f5f4fa;
   --accent-color: #2196f3;
   --header-logo-color: #000;
+  --header-line-color: #ececec;
+}
+
+/*=====Полный сброс некоторых дефолтных значений===*/
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul,
+ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
 }
 
 body {
@@ -15,6 +36,14 @@ body {
   letter-spacing: 0.03em;
 }
 
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /*=====Хедер===*/
 .logo {
   font-family: "Raleway", sans-serif;
@@ -22,11 +51,15 @@ body {
   line-height: 1.19;
   color: var(--accent-color);
   text-decoration: none;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-right: 93px;
 }
 .header-studio {
   color: var(--header-logo-color);
 }
 .nav-list {
+  display: flex;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -45,11 +78,18 @@ body {
   color: var(--accent-color);
 }
 .header-contacts {
+  display: flex;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   list-style: none;
   letter-spacing: 0.02em;
+  margin-left: auto;
+  padding-left: 0;
+}
+
+.header-contacts .header-contacts-item + .header-contacts-item {
+  margin-left: 50px;
 }
 .contacts-link {
   text-decoration: none;
@@ -59,20 +99,55 @@ body {
 .contacts-link:focus {
   color: var(--accent-color);
 }
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header {
+  border-bottom: 1px solid var(--header-line-color);
+}
+
+.nav-list-item {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.nav-list-item:not(:last-child) {
+  margin-right: 50px;
+}
+
 /* ГЛАВНАЯ СТРАНИЦА */
 /* Герой */
 .hero {
+  text-align: center;
   background-color: #2f303a;
   color: var(--primary-background-color);
+  width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 .hero-title {
+  width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   text-transform: uppercase;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
 }
+
 .hero-button {
+  display: inline-block;
+  border: none;
+  min-width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 16px;
@@ -81,11 +156,13 @@ body {
   background-color: var(--accent-color);
   cursor: pointer;
   letter-spacing: 0.06em;
+  padding: 10px 32px;
 }
 .hero-button:hover,
 .hero-button:focus {
   background-color: var(--accent-color);
 }
+
 /* Особенности */
 .features-list {
   list-style: none;
@@ -101,6 +178,32 @@ body {
   color: var(--secondary-text-color);
 }
 
+.features-list {
+  display: flex;
+  align-items: center;
+}
+
+.section {
+  padding-top: 94px;
+}
+
+.features-section {
+  padding-bottom: 47px;
+}
+
+.features-container {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.features-header {
+  margin-bottom: 10px;
+}
+
+.features-item {
+  margin-right: 30px;
+}
+
 /* Чем мы занимаемся */
 .work-header {
   font-size: 36px;
@@ -110,6 +213,11 @@ body {
 .work-list {
   list-style: none;
 }
+
+img {
+  display: block;
+}
+
 /* Наша команда */
 .my-team {
   background-color: var(--secondary-background-color);
