--- a/css/styles.css
+++ b/css/styles.css
@@ -131,13 +131,10 @@ body {
   padding-bottom: 200px;
 }
 .hero-title {
-  width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   text-transform: uppercase;
-  margin-left: auto;
-  margin-right: auto;
   margin-bottom: 30px;
 }
 
@@ -209,9 +206,26 @@ body {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
+  margin-bottom: 50px;
 }
 .work-list {
   list-style: none;
+  display: flex;
+  padding-left: 0px;
+}
+
+.work-list .work-item + .work-item {
+  margin-left: 30px;
+}
+
+.work {
+  padding-top: 47px;
+  padding-bottom: 94px;
+}
+
+.work-item {
+  display: list-item;
+  text-align: -webkit-match-parent;
 }
 
 img {
@@ -221,27 +235,50 @@ img {
 /* Наша команда */
 .my-team {
   background-color: var(--secondary-background-color);
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
+
 .my-team-header {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
+  margin-bottom: 50px;
 }
 .my-team-list {
   list-style: none;
+  display: flex;
 }
 .my-team-worker {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
-  text-align: center;
+  margin-bottom: 10px;
 }
 .my-team-position {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.18;
   color: var(--secondary-text-color);
+}
+
+.my-team-item {
   text-align: center;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  display: list-item;
+  text-align: -webkit-match-parent;
+}
+
+.my-team-item .card-inf {
+  padding: 30px 32px;
+  text-align: center;
+}
+
+.my-team-list .my-team-item + .my-team-item {
+  margin-left: 30px;
 }
 
 /* ПОРТФОЛИО */
@@ -278,6 +315,8 @@ img {
 /* Футер */
 .footer {
   background-color: #2f303a;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .address {
   font-style: normal;
@@ -290,6 +329,7 @@ img {
 }
 .footer-list {
   list-style: none;
+  padding-left: 0px;
 }
 .address .link {
   text-decoration: none;
@@ -298,4 +338,20 @@ img {
 .address .link:hover,
 .address .link:focus {
   color: var(--accent-color);
+}
+
+.footer-logo {
+  display: block;
+  margin-bottom: 20px;
+  padding-bottom: 0px;
+  padding-top: 0px;
+}
+
+.footer-list-item {
+  display: list-item;
+  text-align: -webkit-match-parent;
+}
+
+.footer-list .footer-list-item + .footer-list-item {
+  margin-top: 9px;
 }
